--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,16 @@
-#main-header img {
-  width: 100%;
-  height: 100%;
-}
-
-#main-header .port-item {
-  width: 30%;
-}
-
-#main-header .port-item:hover {
-  opacity: 0.8;
-  cursor: pointer;
-}
-
-.bg-black {
-  color: #fff;
-  background: #011f4b;
-}
-
-@media (min-width: 1199px) {
-  .port-item {
-    padding: 3em !important;
-  }
-}
 .bg-blue {
   background-color: #005b96;
 }
-.bg-light-blue {
-  background-color: #6497b1;
+.text {
+  text-decoration: none;
+  color: #fff;
 }
-.bg-smoke {
-  background-color: #b3cde0;
+a:hover {
+  text-decoration: none;
+  color: #fff;
+}
+h4 > a:hover,
+h5 > a:hover {
+  text-decoration: none;
+  color: #005b96;
 }
